# ComfyUI-PiD

./: .comfyignore  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  nodes.py  pid_auto_settings.py  pid_caption_creator.py  pid_decode.py  pid_empty_latent.py  pid_finalize.py  pid_ksampler_capture.py  pid_prepare.py  pid_sample.py  pid_subprocess_runner.py  pid_text_prompt.py  pid_upscale.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: image_z_image_pid.json  image_z_image_pid_baseline_offload.json  pid_flux2_complete.json  pid_flux2_klein_4b_complete.json  pid_flux2_klein_9b_complete.json  pid_flux_complete.json  pid_image_to_image_2k_complete.json  pid_image_to_image_2kto4k_complete.json  pid_qwenimage_2512_complete.json  pid_qwenimage_complete.json  pid_sd3_complete.json  pid_sdxl_complete.json  pid_upscale_complete.json  pid_zimage_complete.json  pid_zimage_turbo_complete.json
examples/: image_z_image_pid_baseline_offload.json
web/: pid_empty_latent.js
