[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-pid"
description = "ComfyUI custom nodes for NVIDIA PiD pixel diffusion decoding with VRAM offload support."
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/Merserk/ComfyUI-PiD"
"Bug Tracker" = "https://github.com/Merserk/ComfyUI-PiD/issues"

[tool.comfy]
PublisherId = "merserk"
DisplayName = "ComfyUI-PiD"
Icon = ""
includes = ["example_workflows"]
